force-app/src/objects/TR1__External_Timesheet_Hours__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipName>External_Timesheet_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Double_Time_Hours__c</fullName>
        <label>Double Time Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipName>External_Timesheet_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Overtime_Hours__c</fullName>
        <label>Overtime Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Regular_Hours__c</fullName>
        <label>Regular Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Week_Ending_Date__c</fullName>
        <label>Week Ending Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Timesheet Upload</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Timesheet Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Uploads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>